# br-open-ecosystem-degradation

./: 01_exportMosaic_tiff_GCS.ipynb  01_getDisturbance.js  01_getDisturbanceFrequency.js  01_getVectors.js  01a_fireRegime_changes.js  01a_fragmentation_edgeArea.js  01b_fireRegime_change_v2.js  01b_fragmentation_patchSize.js  01c_buildMosaics.ipynb  01c_fragmentation_isolation.js  02_exportStatistics.js  02_getInteractions.js  02_getNomalizationParams.js  02_normalizeFrequencies.js  02_structuralChange.js  02_structureChange.js  02a_stateChange.R  02b_getNormalizationParams.R  02b_natVeg_stateChange_Pantanal.R  02b_stateChange_Pantanal.R  02c_integrate.js  02d_natVeg_stateChange_qualify.R  02e_exportAsset.js  03_assessDisturbanceFrequency.R  03_getEcosystemChanges.js  03_normalizeFrequencies.js  03a_fireFrequency.js  03a_fireRecurrence.js  03a_fragmentation_patchID_patchSize.R  03a_natVeg_stateChange_qualify.R  03b_fireAge.js  04_secondaryVegetation.js  04_state_change.js  04a_getFragmentation.js  04b_getStateChange.R  04b_stateChange.R  04b_stateChange_dealWithErrors.R  05_combineLayers.R  05_getStateChange_L0.js  05_secondaryVegetation.js  (+10 more)
ENN/: CMakeLists.txt  Nabor.R  main.cpp  mosaic_enn.sh
TEMP/: 02b_getNormalizationParams.R  03_normalizeFrequencies.js
invasiveSpp/: 01_createSamples.js  01_exportSamples.js  01_getSpectra.js  02_getSpectra_Landsat.js  02b_getSpectra_Sentinel.js  getSpectra.js
lsMetrics/: 01_get_nativeMask.js  01b__exportNative_toBucket.js  01c_buildMosaics.ipynb  02_translateTables.R  1d_processMetrics.R
pub/: 01b_fireRegime_change.js
(+70 files in other folders)
